# IsaacSim-store-shelf

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.isaacsim  Dockerfile.ros2  README.md  docker-compose.yml  store_scene.blend  store_scene.blend1
src/controller/: package.xml  setup.py
src/controller/controller/: controller.py
src/controller/launch/: collect_vision_data.launch.py  eval_vision.launch.py  isaac.launch.py  kill.launch.py  sim.launch.py  static.launch.py  store_demo.launch.py  train_vision.launch.py
src/isaacsim_manager/: package.xml  setup.cfg  setup.py
src/isaacsim_manager/isaacsim_manager/: image_collection.py  manager.py  scene_construction.py  simulation_app.py  target_marker_visualizer.py  trajectory_executor.py  vision_panel.py
src/isaacsim_manager/resource/: isaacsim_manager
src/motion/: package.xml  setup.py
src/motion/launch/: motion.launch.py
src/motion/motion/: arm_config.py  coordination.py  coordinator.py  cumotion_sphere_publisher.py  occupancy.py  planner.py  trajectory_controller.py
src/store_shelf_controller/: package.xml  setup.cfg  setup.py
src/store_shelf_controller/resource/: store_shelf_controller
src/store_shelf_controller/store_shelf_controller/: controller.py
src/vision/: package.xml  setup.py
src/vision/launch/: inference.launch.py  online_trainer.launch.py  train_vision.launch.py
src/vision/vision/: __init__.py  checkpoints.py  dataset.py  inference.py  model.py  online_trainer.py  train_vision.py  view_dataset.py
src/yumi_description/: package.xml  setup.cfg  setup.py
src/yumi_description/resource/: yumi_description
src/yumi_description/urdf/: yumi.ros2_control.xacro  yumi.urdf.xacro  yumi.xacro
src/yumi_description/urdf/Grippers/: yumi_servo_gripper.xacro
src/yumi_description/yumi_description/: export_isaacsim_urdf.py
src/yumi_moveit_config/: package.xml  setup.cfg  setup.py
src/yumi_moveit_config/config/: controllers.yaml  fake_controllers.yaml  isaac_ros_cumotion_planning.yaml  joint_limits.yaml  moveit_controllers.yaml  moveit_ros2_control_controllers.yaml  ompl_planning.yaml  planning_pipelines.yaml  ros2_controllers.yaml  store_shelf_collision.yaml  trajectory_execution.yaml  yumi.srdf  yumi_left_arm.srdf  yumi_right_arm.srdf
src/yumi_moveit_config/launch/: move_group.launch.py
src/yumi_moveit_config/resource/: yumi_moveit_config
src/yumi_moveit_config/rviz/: cumotion_debug.rviz
src/yumi_moveit_config/yumi_moveit_config/: static_planning_scene.py  static_planning_scene_server.py
usd/: store_scene.usdc
usd/robot/: yumi.usd  yumi_isaacsim.urdf  yumi_isaacsim.xrdf  yumi_isaacsim_left_arm.urdf  yumi_isaacsim_left_arm.xrdf  yumi_isaacsim_right_arm.urdf  yumi_isaacsim_right_arm.xrdf
usd/robot/configuration/: yumi_physics.usd  yumi_robot.usd
