<?xml version="1.0"?>
<package format="3">
  <name>controller</name>
  <version>0.0.0</version>
  <description>Minimal Python ROS 2 controller scaffold for Isaac Sim store shelf.</description>
  <maintainer email="axel@example.com">axel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
