<?xml version="1.0"?>
<package format="3">
  <name>isaacsim_manager</name>
  <version>0.0.0</version>
  <description>ROS 2 manager node for coordinating a running Isaac Sim process.</description>
  <maintainer email="axel@example.com">axel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
