<?xml version="1.0"?>
<package format="3">
  <name>store_shelf_controller</name>
  <version>0.0.0</version>
  <description>Minimal Python ROS 2 controller scaffold for Isaac Sim store shelf.</description>
  <maintainer email="axel@example.com">axel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
