<?xml version="1.0"?>
<package format="3">
  <name>yumi_description</name>
  <version>0.0.0</version>
  <description>Canonical YuMi robot description package for MoveIt and Isaac Sim.</description>
  <maintainer email="axel@example.com">axel</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>xacro</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
